DV1656/assignment3/generated/parser.output
Terminals unused in grammar

    EXTENDS
    LOWER_THAN_ELSE


State 60 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 86 conflicts: 11 shift/reduce
State 87 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce


Grammar

    0 $accept: Goal "end of file"

    1 Goal: MainClass ClassDeclarationList

    2 MainClass: PUBLIC CLASS Identifier LEFT_BRACE ClassBody RIGHT_BRACE

    3 MainMethod: PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET Identifier RIGHT_PARENTHESIS LEFT_BRACE MethodBody RIGHT_BRACE

    4 ClassDeclarationList: ClassDeclaration ClassDeclarationList
    5                     | ε

    6 ClassDeclaration: CLASS Identifier LEFT_BRACE ClassBody RIGHT_BRACE

    7 VarDeclaration: TypeOrIdentifier Identifier SEMICOLON
    8               | TypeOrIdentifier Identifier ASSIGN Expression SEMICOLON

    9 TypeOrIdentifier: Type
   10                 | Identifier

   11 MethodDeclaration: PUBLIC TypeOrIdentifier Identifier LEFT_PARENTHESIS ParameterList RIGHT_PARENTHESIS LEFT_BRACE MethodBody RETURN Expression SEMICOLON RIGHT_BRACE

   12 MethodBody: MethodBodyItem MethodBody
   13           | ε

   14 MethodBodyItem: VarDeclaration
   15               | Statement

   16 ClassBody: ClassBodyItem ClassBody
   17          | ε

   18 ClassBodyItem: VarDeclaration
   19              | MethodDeclaration
   20              | MainMethod

   21 ParameterList: Parameter
   22              | Parameter COMMA ParameterList
   23              | ε

   24 Parameter: Type Identifier
   25          | Identifier Identifier

   26 Type: INT LEFT_BRACKET RIGHT_BRACKET
   27     | BOOLEAN
   28     | INT
   29     | STRING LEFT_BRACKET RIGHT_BRACKET

   30 StatementList: Statement StatementList
   31              | ε

   32 Statement: IF LEFT_PARENTHESIS Expression RIGHT_PARENTHESIS Statement
   33          | IF LEFT_PARENTHESIS Expression RIGHT_PARENTHESIS Statement ELSE Statement
   34          | WHILE LEFT_PARENTHESIS Expression RIGHT_PARENTHESIS Statement
   35          | SYSTEM_OUT_PRINTLN LEFT_PARENTHESIS Expression RIGHT_PARENTHESIS SEMICOLON
   36          | IDENTIFIER ASSIGN Expression SEMICOLON
   37          | LEFT_BRACE StatementList RIGHT_BRACE

   38 ExpressionList: Expression
   39               | Expression COMMA ExpressionList
   40               | ε

   41 Expression: Expression AND Expression
   42           | Expression OR Expression
   43           | Expression LESS_THAN Expression
   44           | Expression GREATER_THAN Expression
   45           | Expression ADD Expression
   46           | Expression SUBTRACT Expression
   47           | Expression MULTIPLY Expression
   48           | Expression EQUAL Expression
   49           | Expression DIVIDE Expression
   50           | Expression LEFT_BRACKET Expression RIGHT_BRACKET
   51           | Expression DOT LENGTH
   52           | Expression DOT Identifier LEFT_PARENTHESIS ExpressionList RIGHT_PARENTHESIS
   53           | INTEGER_LITERAL
   54           | TRUE
   55           | FALSE
   56           | Identifier
   57           | THIS
   58           | NEW INT LEFT_BRACKET Expression RIGHT_BRACKET
   59           | NEW Identifier LEFT_PARENTHESIS RIGHT_PARENTHESIS
   60           | NOT Expression
   61           | LEFT_PARENTHESIS Expression RIGHT_PARENTHESIS

   62 Identifier: IDENTIFIER


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    PUBLIC <std::string> (258) 2 3 11
    CLASS <std::string> (259) 2 6
    VOID <std::string> (260) 3
    MAIN <std::string> (261) 3
    STRING <std::string> (262) 3 29
    INT <std::string> (263) 26 28 58
    BOOLEAN <std::string> (264) 27
    IF <std::string> (265) 32 33
    ELSE <std::string> (266) 33
    WHILE <std::string> (267) 34
    TRUE <std::string> (268) 54
    FALSE <std::string> (269) 55
    THIS <std::string> (270) 57
    NEW <std::string> (271) 58 59
    NOT <std::string> (272) 60
    AND <std::string> (273) 41
    OR <std::string> (274) 42
    LESS_THAN <std::string> (275) 43
    GREATER_THAN <std::string> (276) 44
    EQUAL <std::string> (277) 48
    ADD <std::string> (278) 45
    SUBTRACT <std::string> (279) 46
    MULTIPLY <std::string> (280) 47
    DIVIDE <std::string> (281) 49
    LENGTH <std::string> (282) 51
    LEFT_BRACE <std::string> (283) 2 3 6 11 37
    RIGHT_BRACE <std::string> (284) 2 3 6 11 37
    LEFT_PARENTHESIS <std::string> (285) 3 11 32 33 34 35 52 59 61
    RIGHT_PARENTHESIS <std::string> (286) 3 11 32 33 34 35 52 59 61
    LEFT_BRACKET <std::string> (287) 3 26 29 50 58
    RIGHT_BRACKET <std::string> (288) 3 26 29 50 58
    DOT <std::string> (289) 51 52
    COMMA <std::string> (290) 22 39
    SEMICOLON <std::string> (291) 7 8 11 35 36
    ASSIGN <std::string> (292) 8 36
    IDENTIFIER <std::string> (293) 36 62
    INTEGER_LITERAL <std::string> (294) 53
    STATIC <std::string> (295) 3
    RETURN <std::string> (296) 11
    SYSTEM_OUT_PRINTLN <std::string> (297) 35
    EXTENDS <std::string> (298)
    LOWER_THAN_ELSE (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    Goal <Node*> (46)
        on left: 1
        on right: 0
    MainClass <Node*> (47)
        on left: 2
        on right: 1
    MainMethod <Node*> (48)
        on left: 3
        on right: 20
    ClassDeclarationList <std::list<Node*>> (49)
        on left: 4 5
        on right: 1 4
    ClassDeclaration <Node*> (50)
        on left: 6
        on right: 4
    VarDeclaration <Node*> (51)
        on left: 7 8
        on right: 14 18
    TypeOrIdentifier <std::string> (52)
        on left: 9 10
        on right: 7 8 11
    MethodDeclaration <Node*> (53)
        on left: 11
        on right: 19
    MethodBody <std::list<Node*>> (54)
        on left: 12 13
        on right: 3 11 12
    MethodBodyItem <Node*> (55)
        on left: 14 15
        on right: 12
    ClassBody <std::list<Node*>> (56)
        on left: 16 17
        on right: 2 6 16
    ClassBodyItem <Node*> (57)
        on left: 18 19 20
        on right: 16
    ParameterList <std::list<Node*>> (58)
        on left: 21 22 23
        on right: 11 22
    Parameter <Node*> (59)
        on left: 24 25
        on right: 21 22
    Type <std::string> (60)
        on left: 26 27 28 29
        on right: 9 24
    StatementList <std::list<Node*>> (61)
        on left: 30 31
        on right: 30 37
    Statement <Node*> (62)
        on left: 32 33 34 35 36 37
        on right: 15 30 32 33 34
    ExpressionList <std::list<Node*>> (63)
        on left: 38 39 40
        on right: 39 52
    Expression <Node*> (64)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 8 11 32 33 34 35 36 38 39 41 42 43 44 45 46 47 48 49 50 51 52 58 60 61
    Identifier <std::string> (65)
        on left: 62
        on right: 2 3 6 7 8 10 11 24 25 52 56 59


State 0

    0 $accept: • Goal "end of file"

    PUBLIC  shift, and go to state 1

    Goal       go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: PUBLIC • CLASS Identifier LEFT_BRACE ClassBody RIGHT_BRACE

    CLASS  shift, and go to state 4


State 2

    0 $accept: Goal • "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 Goal: MainClass • ClassDeclarationList

    CLASS  shift, and go to state 6

    $default  reduce using rule 5 (ClassDeclarationList)

    ClassDeclarationList  go to state 7
    ClassDeclaration      go to state 8


State 4

    2 MainClass: PUBLIC CLASS • Identifier LEFT_BRACE ClassBody RIGHT_BRACE

    IDENTIFIER  shift, and go to state 9

    Identifier  go to state 10


State 5

    0 $accept: Goal "end of file" •

    $default  accept


State 6

    6 ClassDeclaration: CLASS • Identifier LEFT_BRACE ClassBody RIGHT_BRACE

    IDENTIFIER  shift, and go to state 9

    Identifier  go to state 11


State 7

    1 Goal: MainClass ClassDeclarationList •

    $default  reduce using rule 1 (Goal)


State 8

    4 ClassDeclarationList: ClassDeclaration • ClassDeclarationList

    CLASS  shift, and go to state 6

    $default  reduce using rule 5 (ClassDeclarationList)

    ClassDeclarationList  go to state 12
    ClassDeclaration      go to state 8


State 9

   62 Identifier: IDENTIFIER •

    $default  reduce using rule 62 (Identifier)


State 10

    2 MainClass: PUBLIC CLASS Identifier • LEFT_BRACE ClassBody RIGHT_BRACE

    LEFT_BRACE  shift, and go to state 13


State 11

    6 ClassDeclaration: CLASS Identifier • LEFT_BRACE ClassBody RIGHT_BRACE

    LEFT_BRACE  shift, and go to state 14


State 12

    4 ClassDeclarationList: ClassDeclaration ClassDeclarationList •

    $default  reduce using rule 4 (ClassDeclarationList)


State 13

    2 MainClass: PUBLIC CLASS Identifier LEFT_BRACE • ClassBody RIGHT_BRACE

    PUBLIC      shift, and go to state 15
    STRING      shift, and go to state 16
    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 17 (ClassBody)

    MainMethod         go to state 19
    VarDeclaration     go to state 20
    TypeOrIdentifier   go to state 21
    MethodDeclaration  go to state 22
    ClassBody          go to state 23
    ClassBodyItem      go to state 24
    Type               go to state 25
    Identifier         go to state 26


State 14

    6 ClassDeclaration: CLASS Identifier LEFT_BRACE • ClassBody RIGHT_BRACE

    PUBLIC      shift, and go to state 15
    STRING      shift, and go to state 16
    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 17 (ClassBody)

    MainMethod         go to state 19
    VarDeclaration     go to state 20
    TypeOrIdentifier   go to state 21
    MethodDeclaration  go to state 22
    ClassBody          go to state 27
    ClassBodyItem      go to state 24
    Type               go to state 25
    Identifier         go to state 26


State 15

    3 MainMethod: PUBLIC • STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET Identifier RIGHT_PARENTHESIS LEFT_BRACE MethodBody RIGHT_BRACE
   11 MethodDeclaration: PUBLIC • TypeOrIdentifier Identifier LEFT_PARENTHESIS ParameterList RIGHT_PARENTHESIS LEFT_BRACE MethodBody RETURN Expression SEMICOLON RIGHT_BRACE

    STRING      shift, and go to state 16
    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IDENTIFIER  shift, and go to state 9
    STATIC      shift, and go to state 28

    TypeOrIdentifier  go to state 29
    Type              go to state 25
    Identifier        go to state 26


State 16

   29 Type: STRING • LEFT_BRACKET RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 30


State 17

   26 Type: INT • LEFT_BRACKET RIGHT_BRACKET
   28     | INT •

    LEFT_BRACKET  shift, and go to state 31

    $default  reduce using rule 28 (Type)


State 18

   27 Type: BOOLEAN •

    $default  reduce using rule 27 (Type)


State 19

   20 ClassBodyItem: MainMethod •

    $default  reduce using rule 20 (ClassBodyItem)


State 20

   18 ClassBodyItem: VarDeclaration •

    $default  reduce using rule 18 (ClassBodyItem)


State 21

    7 VarDeclaration: TypeOrIdentifier • Identifier SEMICOLON
    8               | TypeOrIdentifier • Identifier ASSIGN Expression SEMICOLON

    IDENTIFIER  shift, and go to state 9

    Identifier  go to state 32


State 22

   19 ClassBodyItem: MethodDeclaration •

    $default  reduce using rule 19 (ClassBodyItem)


State 23

    2 MainClass: PUBLIC CLASS Identifier LEFT_BRACE ClassBody • RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 33


State 24

   16 ClassBody: ClassBodyItem • ClassBody

    PUBLIC      shift, and go to state 15
    STRING      shift, and go to state 16
    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 17 (ClassBody)

    MainMethod         go to state 19
    VarDeclaration     go to state 20
    TypeOrIdentifier   go to state 21
    MethodDeclaration  go to state 22
    ClassBody          go to state 34
    ClassBodyItem      go to state 24
    Type               go to state 25
    Identifier         go to state 26


State 25

    9 TypeOrIdentifier: Type •

    $default  reduce using rule 9 (TypeOrIdentifier)


State 26

   10 TypeOrIdentifier: Identifier •

    $default  reduce using rule 10 (TypeOrIdentifier)


State 27

    6 ClassDeclaration: CLASS Identifier LEFT_BRACE ClassBody • RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 35


State 28

    3 MainMethod: PUBLIC STATIC • VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET Identifier RIGHT_PARENTHESIS LEFT_BRACE MethodBody RIGHT_BRACE

    VOID  shift, and go to state 36


State 29

   11 MethodDeclaration: PUBLIC TypeOrIdentifier • Identifier LEFT_PARENTHESIS ParameterList RIGHT_PARENTHESIS LEFT_BRACE MethodBody RETURN Expression SEMICOLON RIGHT_BRACE

    IDENTIFIER  shift, and go to state 9

    Identifier  go to state 37


State 30

   29 Type: STRING LEFT_BRACKET • RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 38


State 31

   26 Type: INT LEFT_BRACKET • RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 39


State 32

    7 VarDeclaration: TypeOrIdentifier Identifier • SEMICOLON
    8               | TypeOrIdentifier Identifier • ASSIGN Expression SEMICOLON

    SEMICOLON  shift, and go to state 40
    ASSIGN     shift, and go to state 41


State 33

    2 MainClass: PUBLIC CLASS Identifier LEFT_BRACE ClassBody RIGHT_BRACE •

    $default  reduce using rule 2 (MainClass)


State 34

   16 ClassBody: ClassBodyItem ClassBody •

    $default  reduce using rule 16 (ClassBody)


State 35

    6 ClassDeclaration: CLASS Identifier LEFT_BRACE ClassBody RIGHT_BRACE •

    $default  reduce using rule 6 (ClassDeclaration)


State 36

    3 MainMethod: PUBLIC STATIC VOID • MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET Identifier RIGHT_PARENTHESIS LEFT_BRACE MethodBody RIGHT_BRACE

    MAIN  shift, and go to state 42


State 37

   11 MethodDeclaration: PUBLIC TypeOrIdentifier Identifier • LEFT_PARENTHESIS ParameterList RIGHT_PARENTHESIS LEFT_BRACE MethodBody RETURN Expression SEMICOLON RIGHT_BRACE

    LEFT_PARENTHESIS  shift, and go to state 43


State 38

   29 Type: STRING LEFT_BRACKET RIGHT_BRACKET •

    $default  reduce using rule 29 (Type)


State 39

   26 Type: INT LEFT_BRACKET RIGHT_BRACKET •

    $default  reduce using rule 26 (Type)


State 40

    7 VarDeclaration: TypeOrIdentifier Identifier SEMICOLON •

    $default  reduce using rule 7 (VarDeclaration)


State 41

    8 VarDeclaration: TypeOrIdentifier Identifier ASSIGN • Expression SEMICOLON

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 51
    Identifier  go to state 52


State 42

    3 MainMethod: PUBLIC STATIC VOID MAIN • LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET Identifier RIGHT_PARENTHESIS LEFT_BRACE MethodBody RIGHT_BRACE

    LEFT_PARENTHESIS  shift, and go to state 53


State 43

   11 MethodDeclaration: PUBLIC TypeOrIdentifier Identifier LEFT_PARENTHESIS • ParameterList RIGHT_PARENTHESIS LEFT_BRACE MethodBody RETURN Expression SEMICOLON RIGHT_BRACE

    STRING      shift, and go to state 16
    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 23 (ParameterList)

    ParameterList  go to state 54
    Parameter      go to state 55
    Type           go to state 56
    Identifier     go to state 57


State 44

   54 Expression: TRUE •

    $default  reduce using rule 54 (Expression)


State 45

   55 Expression: FALSE •

    $default  reduce using rule 55 (Expression)


State 46

   57 Expression: THIS •

    $default  reduce using rule 57 (Expression)


State 47

   58 Expression: NEW • INT LEFT_BRACKET Expression RIGHT_BRACKET
   59           | NEW • Identifier LEFT_PARENTHESIS RIGHT_PARENTHESIS

    INT         shift, and go to state 58
    IDENTIFIER  shift, and go to state 9

    Identifier  go to state 59


State 48

   60 Expression: NOT • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 60
    Identifier  go to state 52


State 49

   61 Expression: LEFT_PARENTHESIS • Expression RIGHT_PARENTHESIS

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 61
    Identifier  go to state 52


State 50

   53 Expression: INTEGER_LITERAL •

    $default  reduce using rule 53 (Expression)


State 51

    8 VarDeclaration: TypeOrIdentifier Identifier ASSIGN Expression • SEMICOLON
   41 Expression: Expression • AND Expression
   42           | Expression • OR Expression
   43           | Expression • LESS_THAN Expression
   44           | Expression • GREATER_THAN Expression
   45           | Expression • ADD Expression
   46           | Expression • SUBTRACT Expression
   47           | Expression • MULTIPLY Expression
   48           | Expression • EQUAL Expression
   49           | Expression • DIVIDE Expression
   50           | Expression • LEFT_BRACKET Expression RIGHT_BRACKET
   51           | Expression • DOT LENGTH
   52           | Expression • DOT Identifier LEFT_PARENTHESIS ExpressionList RIGHT_PARENTHESIS

    AND           shift, and go to state 62
    OR            shift, and go to state 63
    LESS_THAN     shift, and go to state 64
    GREATER_THAN  shift, and go to state 65
    EQUAL         shift, and go to state 66
    ADD           shift, and go to state 67
    SUBTRACT      shift, and go to state 68
    MULTIPLY      shift, and go to state 69
    DIVIDE        shift, and go to state 70
    LEFT_BRACKET  shift, and go to state 71
    DOT           shift, and go to state 72
    SEMICOLON     shift, and go to state 73


State 52

   56 Expression: Identifier •

    $default  reduce using rule 56 (Expression)


State 53

    3 MainMethod: PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS • STRING LEFT_BRACKET RIGHT_BRACKET Identifier RIGHT_PARENTHESIS LEFT_BRACE MethodBody RIGHT_BRACE

    STRING  shift, and go to state 74


State 54

   11 MethodDeclaration: PUBLIC TypeOrIdentifier Identifier LEFT_PARENTHESIS ParameterList • RIGHT_PARENTHESIS LEFT_BRACE MethodBody RETURN Expression SEMICOLON RIGHT_BRACE

    RIGHT_PARENTHESIS  shift, and go to state 75


State 55

   21 ParameterList: Parameter •
   22              | Parameter • COMMA ParameterList

    COMMA  shift, and go to state 76

    $default  reduce using rule 21 (ParameterList)


State 56

   24 Parameter: Type • Identifier

    IDENTIFIER  shift, and go to state 9

    Identifier  go to state 77


State 57

   25 Parameter: Identifier • Identifier

    IDENTIFIER  shift, and go to state 9

    Identifier  go to state 78


State 58

   58 Expression: NEW INT • LEFT_BRACKET Expression RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 79


State 59

   59 Expression: NEW Identifier • LEFT_PARENTHESIS RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 80


State 60

   41 Expression: Expression • AND Expression
   42           | Expression • OR Expression
   43           | Expression • LESS_THAN Expression
   44           | Expression • GREATER_THAN Expression
   45           | Expression • ADD Expression
   46           | Expression • SUBTRACT Expression
   47           | Expression • MULTIPLY Expression
   48           | Expression • EQUAL Expression
   49           | Expression • DIVIDE Expression
   50           | Expression • LEFT_BRACKET Expression RIGHT_BRACKET
   51           | Expression • DOT LENGTH
   52           | Expression • DOT Identifier LEFT_PARENTHESIS ExpressionList RIGHT_PARENTHESIS
   60           | NOT Expression •

    EQUAL         shift, and go to state 66
    LEFT_BRACKET  shift, and go to state 71
    DOT           shift, and go to state 72

    EQUAL     [reduce using rule 60 (Expression)]
    $default  reduce using rule 60 (Expression)


State 61

   41 Expression: Expression • AND Expression
   42           | Expression • OR Expression
   43           | Expression • LESS_THAN Expression
   44           | Expression • GREATER_THAN Expression
   45           | Expression • ADD Expression
   46           | Expression • SUBTRACT Expression
   47           | Expression • MULTIPLY Expression
   48           | Expression • EQUAL Expression
   49           | Expression • DIVIDE Expression
   50           | Expression • LEFT_BRACKET Expression RIGHT_BRACKET
   51           | Expression • DOT LENGTH
   52           | Expression • DOT Identifier LEFT_PARENTHESIS ExpressionList RIGHT_PARENTHESIS
   61           | LEFT_PARENTHESIS Expression • RIGHT_PARENTHESIS

    AND                shift, and go to state 62
    OR                 shift, and go to state 63
    LESS_THAN          shift, and go to state 64
    GREATER_THAN       shift, and go to state 65
    EQUAL              shift, and go to state 66
    ADD                shift, and go to state 67
    SUBTRACT           shift, and go to state 68
    MULTIPLY           shift, and go to state 69
    DIVIDE             shift, and go to state 70
    RIGHT_PARENTHESIS  shift, and go to state 81
    LEFT_BRACKET       shift, and go to state 71
    DOT                shift, and go to state 72


State 62

   41 Expression: Expression AND • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 82
    Identifier  go to state 52


State 63

   42 Expression: Expression OR • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 83
    Identifier  go to state 52


State 64

   43 Expression: Expression LESS_THAN • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 84
    Identifier  go to state 52


State 65

   44 Expression: Expression GREATER_THAN • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 85
    Identifier  go to state 52


State 66

   48 Expression: Expression EQUAL • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 86
    Identifier  go to state 52


State 67

   45 Expression: Expression ADD • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 87
    Identifier  go to state 52


State 68

   46 Expression: Expression SUBTRACT • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 88
    Identifier  go to state 52


State 69

   47 Expression: Expression MULTIPLY • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 89
    Identifier  go to state 52


State 70

   49 Expression: Expression DIVIDE • Expression

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 90
    Identifier  go to state 52


State 71

   50 Expression: Expression LEFT_BRACKET • Expression RIGHT_BRACKET

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 91
    Identifier  go to state 52


State 72

   51 Expression: Expression DOT • LENGTH
   52           | Expression DOT • Identifier LEFT_PARENTHESIS ExpressionList RIGHT_PARENTHESIS

    LENGTH      shift, and go to state 92
    IDENTIFIER  shift, and go to state 9

    Identifier  go to state 93


State 73

    8 VarDeclaration: TypeOrIdentifier Identifier ASSIGN Expression SEMICOLON •

    $default  reduce using rule 8 (VarDeclaration)


State 74

    3 MainMethod: PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING • LEFT_BRACKET RIGHT_BRACKET Identifier RIGHT_PARENTHESIS LEFT_BRACE MethodBody RIGHT_BRACE

    LEFT_BRACKET  shift, and go to state 94


State 75

   11 MethodDeclaration: PUBLIC TypeOrIdentifier Identifier LEFT_PARENTHESIS ParameterList RIGHT_PARENTHESIS • LEFT_BRACE MethodBody RETURN Expression SEMICOLON RIGHT_BRACE

    LEFT_BRACE  shift, and go to state 95


State 76

   22 ParameterList: Parameter COMMA • ParameterList

    STRING      shift, and go to state 16
    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 23 (ParameterList)

    ParameterList  go to state 96
    Parameter      go to state 55
    Type           go to state 56
    Identifier     go to state 57


State 77

   24 Parameter: Type Identifier •

    $default  reduce using rule 24 (Parameter)


State 78

   25 Parameter: Identifier Identifier •

    $default  reduce using rule 25 (Parameter)


State 79

   58 Expression: NEW INT LEFT_BRACKET • Expression RIGHT_BRACKET

    TRUE              shift, and go to state 44
    FALSE             shift, and go to state 45
    THIS              shift, and go to state 46
    NEW               shift, and go to state 47
    NOT               shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 49
    IDENTIFIER        shift, and go to state 9
    INTEGER_LITERAL   shift, and go to state 50

    Expression  go to state 97
    Identifier  go to state 52


State 80

   59 Expression: NEW Identifier LEFT_PARENTHESIS • RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 98


State 81

   61 Expression: LEFT_PARENTHESIS Expression RIGHT_PARENTHESIS •

    $default  reduce using rule 61 (Expression)


State 82

   41 Expression: Expression • AND Expression
   41           | Expression AND Expression •
   42           | Expression • OR Expression
   43           | Expression • LESS_THAN Expression
   44           | Expression • GREATER_THAN Expression
   45           | Expression • ADD Expression
   46           | Expression • SUBTRACT Expression
   47           | Expression • MULTIPLY Expression
   48           | Expression • EQUAL Expression
   49           | Expression • DIVIDE Expression
   50           | Expression • LEFT_BRACKET Expression RIGHT_BRACKET
   51           | Expression • DOT LENGTH
   52           | Expression • DOT Identifier LEFT_PARENTHESIS ExpressionList RIGHT_PARENTHESIS

    LESS_THAN     shift, and go to state 64
    GREATER_THAN  shift, and go to state 65
    EQUAL         shift, and go to state 66
    ADD           shift, and go to state 67
    SUBTRACT      shift, and go to state 68
    MULTIPLY      shift, and go to state 69
    DIVIDE        shift, and go to state 70
    LEFT_BRACKET  shift, and go to state 71
    DOT           shift, and go to state 72

    EQUAL     [reduce using rule 41 (Expression)]
    $default  reduce using rule 41 (Expression)


State 83

   41 Expression: Expression • AND Expression
   42           | Expression • OR Expression
   42           | Expression OR Expression •
   43           | Expression • LESS_THAN Expression
   44           | Expression • GREATER_THAN Expression
   45           | Expression • ADD Expression
   46           | Expression • SUBTRACT Expression
   47           | Expression • MULTIPLY Expression
   48           | Expression • EQUAL Expression
   49           | Expression • DIVIDE Expression
   50           | Expression • LEFT_BRACKET Expression RIGHT_BRACKET
   51           | Expression • DOT LENGTH
   52           | Expression • DOT Identifier LEFT_PARENTHESIS ExpressionList RIGHT_PARENTHESIS

    AND           shift, and go to state 62
    LESS_THAN     shift, and go to state 64
    GREATER_THAN  shift, and go to state 65
    EQUAL         shift, and go to state 66
    ADD           shift, and go to state 67
    SUBTRACT      shift, and go to state 68
    MULTIPLY      shift, and go to state 69
    DIVIDE        shift, and go to state 70
    LEFT_BRACKET  shift, and go to state 71
    DOT           shift, and go to state 72

    EQUAL     [reduce using rule 42 (Expression)]
    $default  reduce using rule 42 (Expression)


State 84

   41 Expression: Expression • AND Expression
   42           | Expression • OR Expression
   43           | Expression • LESS_THAN Expression
   43           | Expression LESS_THAN Expression •
   44           | Expression • GREATER_THAN Expression
   45           | Expression • ADD Expression
   46           | Expression • SUBTRACT Expression
   47           | Expression • MULTIPLY Expression
   48           | Expression • EQUAL Expression
   49           | Expression • DIVIDE Expression
   50           | Expression • LEFT_BRACKET Expression RIGHT_BRACKET
   51           | Expression • DOT LENGTH
   52           | Expression • DOT Identifier LEFT_PARENTHESIS ExpressionList RIGHT_PARENTHESIS

    EQUAL         shift, and go to state 66
    ADD           shift, and go to state 67
    SUBTRACT      shift, and go to state 68
    MULTIPLY      shift, and go to state 69
    DIVIDE        shift, and go to state 70
    LEFT_BRACKET  shift, and go to state 71
    DOT           shift, and go to state 72

    LESS_THAN     error (nonassociative)
    GREATER_THAN  error (nonassociative)
